# lalibe

./: CMakeLists.txt  INSTALL  README.md  license.txt
configuration/: FindCHROMA.cmake  chroma-config.cmake  lalibe_configure.h.in
lib/: CMakeLists.txt  tags
lib/NN/: NN_LC_w.cc  NN_LC_w.h  blockstuff.cc  blockstuff.h  checkpointstuff.cc  checkpointstuff.h  fourier_cpu.h  fourier_cuda.h  mapstuff.h  momstuff.cc  momstuff.h  sinks.cc  sinks.h  spinstuff.cc  spinstuff.h  transform.cc  transform.h
lib/contractions/: CMakeLists.txt  Makefile  baryon_contractions_func_w.cc  baryon_contractions_func_w.h  baryon_contractions_func_w_new.cc  baryon_contractions_func_w_new.h  baryon_seqsource_w.cc  baryon_seqsource_w.h  meson_contractions_func_w.cc  meson_contractions_func_w.h  pipi_scattering.cc  pipi_scattering.h  pipi_scattering_func_w.cc  pipi_scattering_func_w.h  proton_contractions_func_w.cc  proton_contractions_func_w.h  seqsource_contractions_func_w.cc  seqsource_contractions_func_w.h
lib/io/: CMakeLists.txt  hdf5_write_obj_funcmap.cc  hdf5_write_obj_funcmap.h  lalibe_qprop_io.cc  lalibe_qprop_io.h
lib/matrix_elements/: CMakeLists.txt  bilinear_gamma.cc  bilinear_gamma.h  chromomag_seqsource_w.cc  chromomag_seqsource_w.h  lalibe_formfac_w.cc  lalibe_formfac_w.h  tr_less_fields.cc  tr_less_fields.h
lib/measurements/: CMakeLists.txt  HP_fh_prop_w.cc  HP_fh_prop_w.h  HP_prop_w.cc  HP_prop_w.h  Makefile  NN_LC_prop_w.cc  NN_LC_prop_w.h  ZN_prop_w.cc  ZN_prop_w.h  baryon_contractions_w.cc  baryon_contractions_w.h  baryon_contractions_w_new.cc  baryon_contractions_w_new.h  baryon_fh_contractions_w.cc  baryon_fh_contractions_w.h  coherent_seqsource_w.cc  coherent_seqsource_w.h  fh_prop_w.cc  fh_prop_w.h  flavor_changing_fh_baryon_contractions_w.cc  flavor_changing_fh_baryon_contractions_w.h  flavor_conserving_fh_baryon_contractions_w.cc  flavor_conserving_fh_baryon_contractions_w.h  gauge_transported_prop_w.cc  gauge_transported_prop_w.h  hdf5_read_obj.cc  hdf5_read_obj.h  hdf5_write_erase_obj.cc  hdf5_write_erase_obj.h  hdf5_write_obj.cc  hdf5_write_obj.h  lalibe_aggregate.cc  lalibe_aggregate.h  lalibe_bar3ptfn_w.cc  lalibe_bar3ptfn_w.h  lalibe_seqsource_w.cc  lalibe_seqsource_w.h  laph_smearing_prop_w.cc  laph_smearing_prop_w.h  (+24 more)
lib/momentum/: CMakeLists.txt  lalibe_sftmom.cc  lalibe_sftmom.h
lib/numerics/: CMakeLists.txt  binaryRecursiveColoring.cc  binaryRecursiveColoring.h  binaryRecursiveColoring_v2.h
lib/stochastic_laph/: data_io_handler.h  field_smearing_handler.cc  field_smearing_handler.h  field_smearing_info.cc  field_smearing_info.h  filelist_info.cc  filelist_info.h  gauge_configuration_handler.cc  gauge_configuration_handler.h  gauge_configuration_info.cc  gauge_configuration_info.h  io_handler.cc  io_handler.h  io_map.h  ksrlanczos.cc  ksrlanczos.h  laph_eigen_info.cc  laph_eigen_info.h  output_help.cc  output_help.h  xml_help.cc  xml_help.h
lib/util/: CMakeLists.txt  spin_basis.cc  spin_basis.h
main/: lalibe.cc
notes/: .gitignore  notes.bib  proton_FH_contractions.bbl  proton_FH_contractions.blg  proton_FH_contractions.tex
tests/input_decks/: fh_prop.quda.elem.ini.xml  fh_prop.quda.ini.xml  lalibe_HP_fh_prop_contract.ini.xml  make_src__solve_prop_seqsource_formfac.ini.xml  make_src_solve_prop_baryon_contractions.ini.xml  make_src_solve_prop_laph_smear.ini.xml  make_src_solve_prop_negpar_seqsource_relativetsep_formfac.ini.xml  make_src_solve_prop_seqsource_HP512_formfac.ini.xml  make_src_solve_prop_seqsource_HP_formfac.ini.xml  make_src_solve_prop_seqsource_relativetsep_formfac.ini.xml  make_src_solve_prop_seqsource_stochastic_formfac.ini.xml  make_src_solve_prop_seqsource_upperprop_formfac.ini.xml  make_src_solve_prop_solve_fhprop_baryon_contractions_write_props.ini.xml  make_src_solve_prop_solve_fhprop_solve_ZNprop_baryon_contractions.ini.xml  make_src_solve_prop_write_links_write_prop.ini.xml  moments_fh_prop_twisted.quda_hdf5_write.elem.ini.xml  read_seqsource_upperprop_formfac.ini.xml  read_source_hdf5_do_prop_unprec_clover.ini.xml
tests/regression/: run_regression.sh
tests/regression/input_decks/: baryon-fh.ini.xml  fh-corrs_h5.ini.xml  fh-props_h5.ini.xml  make_srcs_solve_props_do_NN.ini.xml  mesons_baryons_h5.ini.xml  old_pipi_scattering_h5.ini.xml  pipi_scattering_h5.ini.xml  proton_formfac_h5.ini.xml  proton_seqprop_h5.ini.xml  source_prop_h5.ini.xml  source_prop_pipi.ini.xml
tests/regression/known_results/: NN_results.h5  halfbaryoncontractions.hd5  lalibe_2pt_spectrum.h5  lalibe_2pt_spectrum_lime.h5  lalibe_3ptfn.h5  lalibe_3ptfn_2src_coherent_sink.h5  lalibe_3ptfn_coherent_sink.h5  lalibe_fh_proton.h5  lalibe_pipi.h5  pipi_propagators.h5  test_SS_propagator.h5  test_propagator.h5  test_propagator_t4.h5  test_seqprop.h5  test_seqsource.h5
tests/regression/py_scripts/: .gitignore  compare_h5_files.py  contractions.py  diagrams.py  gamma.py  make_all_props.py  make_bf_seqprops.py  make_seqsource_h5.PP.awl.py  make_seqsource_h5.PP.py  make_seqsource_h5.PS.py  make_seqsource_h5.SS.py  make_seqsource_h5_xml_ini.py  meson_meson_contract.py  perform_revision_test.py  pipi_scattering.py  pipi_scattering_check.py  pipi_scattering_qqbar.py  test.py  two_point.py
